// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PositionInput should render correctly on desktop 1`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="x_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 2`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="y_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 3`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        1
      </sub>
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="x1_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 4`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        1
      </sub>
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="y1_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 5`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        2
      </sub>
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="x2_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 6`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        2
      </sub>
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="y2_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 7`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        C
      </sub>
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="cx_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 8`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        C
      </sub>
    </div>
    <div
      class="input"
    >
      <div
        class="ant-input-number css-dev-only-do-not-override-hash input"
      >
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="0"
            autocomplete="off"
            class="ant-input-number-input"
            id="cy_position"
            role="spinbutton"
            step="1"
            value="0"
          />
        </div>
      </div>
      <span
        class="unit"
      >
        mm
      </span>
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on mobile 1`] = `
<div>
  <div
    id="x_position"
  >
    X
    <div>
      0
    </div>
    <button
      type="button"
    />
  </div>
</div>
`;
